lit review ready

--- a/document/book.bib
+++ b/document/book.bib
@@ -4132,4 +4132,20 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   keywords = {Computational linguistics,Statistical methods}
 }
 
+@article{schellenbergMemorySurfaceFeatures2014,
+  title = {Memory for Surface Features of Unfamiliar Melodies: Independent Effects of Changes in Pitch and Tempo},
+  volume = {78},
+  issn = {0340-0727, 1430-2772},
+  shorttitle = {Memory for Surface Features of Unfamiliar Melodies},
+  doi = {10.1007/s00426-013-0483-y},
+  abstract = {A melody's identity is determined by relations between consecutive tones in terms of pitch and duration, whereas surface features (i.e., pitch level or key, tempo, and timbre) are irrelevant. Although surface features of highly familiar recordings are encoded into memory, little is known about listeners' mental representations of melodies heard once or twice. It is also unknown whether musical pitch is represented additively or interactively with temporal information. In two experiments, listeners heard unfamiliar melodies twice in an initial exposure phase. In a subsequent test phase, they heard the same (old) melodies interspersed with new melodies. Some of the old melodies were shifted in key, tempo, or key and tempo. Listeners' task was to rate how well they recognized each melody from the exposure phase while ignoring changes in key and tempo. Recognition ratings were higher for old melodies that stayed the same compared to those that were shifted in key or tempo, and detrimental effects of key and tempo changes were additive in between-subjects (Experiment 1) and within-subjects (Experiment 2) designs. The results confirm that surface features are remembered for melodies heard only twice. They also imply that key and tempo are processed and stored independently.},
+  language = {en},
+  number = {1},
+  journal = {Psychological Research},
+  author = {Schellenberg, E. Glenn and Stalinski, Stephanie M. and Marks, Bradley M.},
+  year = {2014},
+  pages = {84-95},
+  file = {/Users/davidjohnbaker/Zotero/storage/UI88SY67/Schellenberg et al. - 2014 - Memory for surface features of unfamiliar melodies.pdf}
+}
+
 
