--- a/document/book.bib
+++ b/document/book.bib
@@ -4148,4 +4148,18 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   file = {/Users/davidjohnbaker/Zotero/storage/UI88SY67/Schellenberg et al. - 2014 - Memory for surface features of unfamiliar melodies.pdf}
 }
 
+@article{hewlettComputingMusicology1991,
+  title = {Computing in Musicology},
+  volume = {25},
+  issn = {0010-4817, 1572-8412},
+  shorttitle = {Computing in Musicology, 1966},
+  doi = {10.1007/BF00141188},
+  language = {en},
+  number = {6},
+  journal = {Computers and the Humanities},
+  author = {Hewlett, Walter B. and {Selfridge-Field}, Eleanor},
+  year = {1991},
+  pages = {381-392}
+}
+
 
